--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <html>
     <head>
     <meta charset=utf-8 />
+    <link rel="icon" type="image/jpeg" href="./logo.jpg">
     <title>🔴 Streaming Now - Synaptic Simulations</title>
     <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
     <script src="https://unpkg.com/video.js/dist/video.js"></script>
