--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@ a {
   <div class="overlay__inner">
     <!-- Title -->
     <h1 class="overlay__title">
-      Hey, it looks like we're not 
-      <span class="text-gradient">streaming</span>! Let's go back to our main page until we start.
+      Hey there! It looks like we're not 
+      <span class="text-gradient">streaming</span> right now. Let's go back to our main page until we start.
     </h1>
     <!-- Description -->
     <p class="overlay__description">
-      We really appreciate you visiting our website, although, we're not streaming right now! Try again at a later time please.
+      We really appreciate you visiting our website, although, we're not streaming at this time! Try again at a later time please.
       <strong></strong>
     </p>
     <!-- Buttons -->
     <div class="overlay__btns">
 
-      <button class="overlay__btn overlay__btn--colors">
-        <span>Go To Our Main Page.</span>
+      <button onClick="window.location.href='https://synaticsim.live';" class="overlay__btn overlay__btn--colors">
+        <span>Go To Our Main Page</span>
       </button>
     </div>
   </div>
