--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@ a {
     <!-- Buttons -->
     <div class="overlay__btns">
 
-      <button onClick="window.location.href='https://synaticsim.live';" class="overlay__btn overlay__btn--colors">
+      <button onClick="window.location.href='https://synapticsim.live';" class="overlay__btn overlay__btn--colors">
         <span>Go To Our Main Page</span>
       </button>
     </div>
   </div>
 </div>
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+    <script src="./common.js"></script>
 
   
       <script id="rendered-js" type="module">
