--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta charset="UTF-8">
   
 <link rel="apple-touch-icon" type="image/png" href="./logo.jpg" />
-<meta name="apple-mobile-web-app-title" content="Not Streaming - Synaptic Simulations">
+<meta name="apple-mobile-web-app-title" content="Landing - Synaptic Simulations">
 
 <link rel="shortcut icon" type="image/x-icon" href="./logo.jpg" />
 
 <link rel="mask-icon" type="image/x-icon" href="./logo.jpg" color="#111" />
 
 
-  <title>Not Streaming - Synaptic Simulations</title>
+  <title>Landing - Synaptic Simulations</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
