--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ a {
     <!-- Buttons -->
     <div class="overlay__btns">
 
-      <button onClick="window.location.href='https://synapticsim.live';" class="overlay__btn overlay__btn--colors">
+      <button onClick="window.location.href='http://synapticsim.live';" class="overlay__btn overlay__btn--colors">
         <span>Go To Our Main Page</span>
       </button>
     </div>
