--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ a {
     <!-- Description -->
     <p class="overlay__description">
       We really appreciate you visiting our website, although, we're not streaming at this time! Try again at a later time please.
-      <strong>This website is End-to-End Encrypted for your safety.</strong>
+      <strong>This website is <span class="text-gradient">End-to-End Encrypted</span> for your safety.</strong>
     </p>
     <!-- Buttons -->
     <div class="overlay__btns">
